--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@fxts/core": "^0.28.1",
     "@tanstack/react-query": "^5.35.1",
+    "@tanstack/react-router": "^1.31.26",
     "classnames": "^2.5.1",
     "csv": "^6.3.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tanstack/router-vite-plugin": "^1.31.18",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react-swc": "^3.5.0",
